--- a/TESTING.html
+++ b/TESTING.html
@@ -66,7 +66,7 @@
         <h1>Coding Partner</h1>
     </header>
     <div class="container">
-        <form id="coding-form">
+        <form id="coding-form"> action="https://formspree.io/f/xdknbqgb" method="POST">
             <!-- First Page Questions -->
             <div class="question">
                 <label for="name">What is your name?</label>
@@ -88,8 +88,8 @@
                 <input type="text" id="height" name="height">
             </div>
             <div class="question">
-                <label for="love-language">What is your love language?</label>
-                <input type="text" id="love-language" name="love-language">
+                <label for="love-language">What is your favorite song?</label>
+                <input type="text" id="favorite-song" name="favorite-song">
             </div>
 
             <!-- Second Page Questions -->
