--- a/TESTING.html
+++ b/TESTING.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -66,7 +66,8 @@
         <h1>Coding Partner</h1>
     </header>
     <div class="container">
-        <form id="coding-form"> action="https://formspree.io/f/xdknbqgb" method="POST">
+        <!-- Updated form with action and method attributes -->
+        <form id="coding-form" action="https://formspree.io/f/xdknbqgb" method="POST">
             <!-- First Page Questions -->
             <div class="question">
                 <label for="name">What is your name?</label>
@@ -88,8 +89,8 @@
                 <input type="text" id="height" name="height">
             </div>
             <div class="question">
-                <label for="love-language">What is your favorite song?</label>
-                <input type="text" id="favorite-song" name="favorite-song">
+                <label for="love-language">What is your weight?</label>
+                <input type="text" id="weight" name="weight">
             </div>
 
             <!-- Second Page Questions -->
@@ -121,8 +122,7 @@
         </form>
     </div>
 
-    <script>
-        document.getElementById('coding-form').addEventListener('submit', function(event) {
+    <script>document.getElementById('coding-form').addEventListener('submit', function(event) {
             event.preventDefault();
             window.location.href = 'THANKS%20LOL.html';
         });
